--- a/styles/style.css
+++ b/styles/style.css
@@ -110,10 +110,10 @@ p {
         display:none;
     }
 
-    h1, .home-page{
-    font-size:32px;
+    h1.home-page{
+    font-size:30px;
     font-weight:480px;
-    margin:0;
+    margin-bottom:18px;
     }
 
     h2{font-size:28px;}
@@ -144,10 +144,10 @@ p {
         margin-bottom:30px;
         font-size:22px;
     }
-    h1, .about-me-page{
-        font-size: 40px;
+    h1.about-me-page{
+        font-size:44px;
     }
-    h3, .about-me-page{
+    h3.about-me-page{
         font-size: 18px;
         padding-top:8px;
     }
